apps/unifi-network-application/deployment-mongo.yaml
---
# MongoDB Deployment (Official MongoDB container)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi-network-application
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: unifi-db
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      nodeSelector:
        longhorn-storage: "true"
      securityContext:
        fsGroup: 999
      containers:
        - name: mongo
          image: mongo:4.4.10
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          args:
            - --bind_ip_all

          resources: {}

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-init-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
        - name: mongo-init-scripts
          configMap:
            name: mongo-init-grant
            items:
              - key: zzz-grant-unifi-stat.sh
                path: zzz-grant-unifi-stat.sh
