apps/unifi-network-application/ingress-amer-dev.yaml
# Traefik v3 Ingress annotation service.serversscheme doesn't work reliably.
# Use IngressRoute CRD + ServersTransport for HTTPS backends instead.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-amer-dev
  namespace: unifi-network-application
  annotations:
    external-dns.alpha.kubernetes.io/hostname: unifi.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.amer.dev`)
      kind: Rule
      services:
        - name: unifi-controller
          port: 8443
          scheme: https
          serversTransport: unifi-skip-verify
  tls:
    secretName: unifi-amer-dev-tls
